Fixed header spacing

--- a/src/Components/MapsDisplay/MapsDisplay.css
+++ b/src/Components/MapsDisplay/MapsDisplay.css
@@ -1,3 +1,7 @@
+.app-title {
+    margin-bottom: 0;
+}
+
 .container {
     background-color: darkgray;
     margin: 25px;
